update .env.sample to include Kafka, MongoDB, MySQL, and PostgreSQL settings

--- a/.env.sample
+++ b/.env.sample
@@ -1,41 +1,21 @@
-# Zookeeper settings
-ZOOKEEPER_CLIENT_PORT=2181
-ZOOKEEPER_TICK_TIME=2000
+# Kafka
+KAFKA_VERSION=latest
+KAFKA_UI_VERSION=latest
 
-# Kafka settings
-KAFKA_ADVERTISED_LISTENERS=INSIDE://:9092
-KAFKA_BROKER_ID=1
-KAFKA_INTER_BROKER_LISTENER_NAME=INSIDE
-KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INSIDE:PLAINTEXT
-KAFKA_LISTENERS=INSIDE://:9092
-KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+# MongoDB
+MONGO_VERSION=latest
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=example
 
-# Kafka UI settings
-KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
-KAFKA_CLUSTERS_0_NAME=local
-KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
-KAFKA_CLUSTERS_0_PROPERTIES_SECURITY_PROTOCOL=PLAINTEXT
+# MySQL
+MYSQL_VERSION=latest
+MYSQL_ROOT_PASSWORD=example
+MYSQL_DATABASE=testdb
+MYSQL_USER=user
+MYSQL_PASSWORD=password
 
-#MongoDB settings
-MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=password
-
-#Postgres settings
-POSTGRES_USER=admin
+# PostgreSQL
+POSTGRES_VERSION=latest
+POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_DB=mydatabase
-
-#MySQL settings
-MYSQL_IMAGE_VERSION=latest
-MYSQL_ROOT_PASSWORD=root_password
-MYSQL_DATABASE=my_database
-MYSQL_USER=my_user
-MYSQL_PASSWORD=my_password
-
-# Docker image versions
-ZOOKEEPER_IMAGE_VERSION=7.2.1
-KAFKA_IMAGE_VERSION=7.2.1
-KAFKA_UI_IMAGE_VERSION=0.3.0
-MONGO_IMAGE_VERSION=5.0.6
-POSTGRES_IMAGE_VERSION=13.4
-MYSQL_IMAGE_VERSION=latest
+POSTGRES_DB=testdb
